# fmralign

./: .buildinfo  .coverage  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  LICENSE  Makefile  README.md  authors.html  index.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  sg_execution_times.html  user_guide.html  whats_new.html
.circleci/: config.yml
.github/: doc-build.yml
.github/workflows/: doc-build.yml  doc-deploy.yml  testing.yml
_downloads/0b52291c5d4529d22a4b2d1ae507b098/: plot_pairwise_alignment.ipynb
_downloads/3f682fdf0c5f75a4c44fb16571277c10/: plot_toy_int_experiment.ipynb
_downloads/6a8e52be39106976d962600901ce6235/: plot_template_alignment.ipynb
_downloads/93cb4c02328c86facee0e287e365cb0e/: plot_int_alignment.ipynb
_downloads/abf5fca0f316559675e6785dee653a1f/: plot_alignment_simulated_2D_data.py
_downloads/acb66ee7f529e387ab2018ae6055b46c/: plot_alignment_simulated_2D_data.ipynb
_downloads/b855be8ccc2a268619ec16caf487749e/: plot_pairwise_roi_alignment.py
_downloads/b885fb894b22be261ce320523a208b83/: plot_alignment_methods_benchmark.ipynb
_downloads/c64bd11f7deff37503b6073ae3e1bec2/: plot_pairwise_alignment.py
_downloads/d5f9258ebaaa3446b17d5c0324441f8c/: plot_pairwise_roi_alignment.ipynb
_modules/: index.html
_modules/fmralign/: alignment_methods.html  pairwise_alignment.html  template_alignment.html
_sources/: index.rst.txt  overview.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  plot_alignment_methods_benchmark.rst.txt  plot_alignment_simulated_2D_data.rst.txt  plot_int_alignment.rst.txt  plot_pairwise_alignment.rst.txt  plot_pairwise_roi_alignment.rst.txt  plot_template_alignment.rst.txt  plot_toy_int_experiment.rst.txt  sg_execution_times.rst.txt
_sources/functional_alignment/: fmralign_pipeline.rst.txt  introduction.rst.txt
_sources/modules/: reference.rst.txt
_static/: nature.css
auto_examples/: index.html  plot_alignment_methods_benchmark.html  plot_alignment_simulated_2D_data.html  plot_int_alignment.html  plot_pairwise_alignment.html  plot_pairwise_roi_alignment.html  plot_template_alignment.html  plot_toy_int_experiment.html  sg_execution_times.html
circleci/: config.yml
doc/: Makefile  conf.py  index.rst  introduction.rst  make.bat  quickstart.md  quickstart.rst  references.bib  soft_references.bib  user_guide.rst  whats_new.rst
doc/functional_alignment/: fmralign_pipeline.rst  index.rst  introduction.rst
doc/modules/: reference.rst
doc/source/: conf.py  index.rst
doc/sphinxext/: gh_substitutions.py  github_link.py
doc/themes/: custom.css
examples/: README.rst  pairwise_alignment.ipynb  pairwise_alignment.py  pairwise_roi_alignment.py  plot_alignment_methods_benchmark.py  plot_alignment_simulated_2D_data.py  plot_hyperalignment.py  plot_int_alignment.py  plot_pairwise_alignment.py  plot_pairwise_roi_alignment.py  plot_srm_alignment.py  plot_surf_alignment.py  plot_template_alignment.py  plot_toy_int_experiment.py  template_alignment.py
fmralign/: .coverage  __init__.py  _utils.py  alignment_methods.py  fetch_example_data.py  functional_maps.py  generate_data.py  metrics.py  pairwise_alignment.py  piecewise.py  preprocessing.py  score_metrics.py  sparse_pairwise_alignment.py  sparse_template_alignment.py  srm.py  template_alignment.py  version.py
fmralign.egg-info/: PKG-INFO  SOURCES.txt
fmralign/examples/: fetch_example_data.py  pairwise_alignment.py  pairwise_roi_alignment.ipynb  pairwise_roi_alignment.py  template_alignment.py
fmralign/hyperalignment/: correlation.py  hyperalignment.py  individualized_neural_tuning.py  linalg.py  local_template.py  model.py  piecewise_alignment.py  procrustes.py  regions.py  regions_alignment.py  test_hyperalignment.py  toy_experiment.py
fmralign/tests/: _test_piecewise_alignment.py  conftest.py  test_alignment_methods.py  test_functional_maps.py  test_hungarian_alignment.py  test_identity_alignment.py  test_metrics.py  test_pairwise_alignment.py  test_piecewise.py  test_piecewise_alignment.py  test_preprocessing.py  test_ridge_alignment.py  test_scaled_orthogonal_alignment.py  test_sparse_pairwise_alignment.py  test_sparse_template_alignment.py  test_srm.py  test_template_alignment.py  test_utils.py  utils.py
functional_alignment/: fmralign_pipeline.html  index.html  introduction.html
functional_alignment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
modules/: reference.html
notebooks/auto_examples/: plot_alignment_methods_benchmark.ipynb  plot_alignment_simulated_2D_data.ipynb  plot_int_alignment.ipynb  plot_pairwise_alignment.ipynb  plot_pairwise_roi_alignment.ipynb  plot_template_alignment.ipynb  plot_toy_int_experiment.ipynb
source/: conf.py  index.rst  introduction.rst
source/functional_alignment/: fmralign_pipeline.rst  functional_alignment_intro.rst  index.rst
source/modules/: reference.rst
(+5 files in other folders)
